force-app/main/default/objects/Checklist_Item__c/Checklist_Item__c.object-meta.xml
<CustomObject>
    <label>Checklist Item</label>
    <nameField>
        <displayFormat>CI - {0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>