force-app/main/default/objects/Checklist_Item__c/fields/Checklist_Master__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Master__c</fullName>
    <label>Checklist Master</label>
    <referenceTo>Checklist_Master__c</referenceTo>
    <relationshipLabel>Checklist Item</relationshipLabel>
    <relationshipName>Checklist_Item</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>