force-app/main/default/objects/Checklist_Item__c/fields/Completed_Formula__c.field-meta.xml
<CustomField>
    <fullName>Completed_Formula__c</fullName>
    <formula>If( Completed__c, IMAGE(&apos;/resource/1563949216000/UploadIcon&apos;,&apos;&apos;, 25, 25) ,&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed</label>
    <type>Text</type>
</CustomField>