force-app/main/default/objects/Checklist_Item__c/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <formula>If(  AND(!Completed__c,Due_Date__c &lt;  TODAY()) , IMAGE(&apos;/resource/1568801662000/OverdueIcon&apos;,&apos;&apos;, 25, 25) ,&apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue</label>
    <type>Text</type>
</CustomField>